--- a/package.json
+++ b/package.json
@@ -8,5 +8,24 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1"
-  }
+  },
+  "name": "p2-iproject-server",
+  "description": "Individual Project - Server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LordFeexz/p2-iproject-server.git"
+  },
+  "keywords": [],
+  "author": "Ananda Fiqri",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LordFeexz/p2-iproject-server/issues"
+  },
+  "homepage": "https://github.com/LordFeexz/p2-iproject-server#readme"
 }
