--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "description": "Individual Project - Server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^29.1.2",
+    "supertest": "^6.3.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --forceExit",
+    "dev" : "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
