--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "test": "jest --runInBand --forceExit",
-    "dev" : "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "repository": {
     "type": "git",
