--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1"
   },
