--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "sequelize": "^6.25.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "sequelize-cli": "^6.5.1"
   }
 }
