--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "midtrans-client": "^1.3.1",
     "pg": "^8.8.0",
     "sequelize": "^6.24.0"
   },
