--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.10.0",
+    "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.23.1"
+    "sequelize": "^6.23.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.3",
     "vite": "^3.1.3"
   }
 }
