--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1"
   },
