--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.24.0"
+    "sequelize": "^6.24.0",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
