--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,7 @@
   "production": {
     "use_env_variable": "DATABASE_URL",
     "dialectOptions": {
-      "ssl": {
-        "rejectUnauthorized": false
-      }
+      "ssl": { "rejectUnauthorized": false }
     }
   }
 }
