--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SECRET_KEY=RAHASIABUANGETLOCHHH
 GOOGLE_CLIENT_ID=
 GOOGLE_MAPS_CLIENT_ID=
+USER_EMAIL=nissinwaffer2000@gmail.com
+USER_PASS=xejduwhcsuzvpzhc
