--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "ms": "^2.1.3",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1"
   },
