--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "sequelize": "^6.23.1",
     "validator": "^13.7.0"
