--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.1",
     "heroku": "^7.64.0",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
     "moment": "^2.29.4",
     "ms": "^2.1.3",
     "nodemailer": "^6.8.0",
