--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@dicebear/avatars": "^4.10.5",
+    "@dicebear/big-ears-neutral": "^4.10.5",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
