--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
     "pg": "^8.8.0",
