--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 SECRET_KEY=RAHASIABUANGETLOCHHH
-GOOGLE_CLIENT_ID=
-GOOGLE_MAPS_CLIENT_ID=
+GOOGLE_CLIENT_ID=858089526355-5h2n5oueqtbn0jjm28svlhejcid706cn.apps.googleusercontent.com
 USER_EMAIL=nissinwaffer2000@gmail.com
 USER_PASS=xejduwhcsuzvpzhc
