--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "google-auth-library": "^8.5.2",
     "heroku": "^7.64.0",
     "jsonwebtoken": "^8.5.1",
     "midtrans-client": "^1.3.1",
