--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "test": "jest --runInBand --forceExit",
     "dev": "nodemon ./bin/www",
-    "start" : "node .bin/www"
+    "start" : "node .bin/www.js"
   },
   "repository": {
     "type": "git",
