--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "midtrans-client": "^1.3.1",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "sequelize": "^6.25.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.1"
   }
